infra/gcp/gke/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nojv
  labels:
    name: nojv
---
apiVersion: v1
kind: Namespace
metadata:
  name: nojv-sandbox
  labels:
    name: nojv-sandbox
---
apiVersion: v1
kind: Namespace
metadata:
  name: nojv-temporal
  labels:
    name: nojv-temporal
