infra/gcp/gke/sandbox.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nojv-sandbox
spec:
  selector:
    app.kubernetes.io/name: nojv-sandbox
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
