infra/gcp/gke/sandbox.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nojv-sandbox-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nojv-sandbox
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: nojv-worker
      ports:
        - protocol: TCP
          port: 8080
